--- a/css/npkg.css
+++ b/css/npkg.css
@@ -19,6 +19,8 @@
 .page-about .right { background: #f1e9c5 url("../img/marty.jpg") right top no-repeat; min-height: 450px; }
 
 .toc-stripe { height: 450px; width: 19.2%; margin-right: 1%; background-color: #ccc; float: left; text-align: center; padding: 20px; }
+@media (max-width: 992px) { .toc-stripe { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
+  .toc-stripe .ttl { margin: 20px 20px; } }
 .toc-stripe.last { margin-right: 0; }
 .toc-stripe.last .ttl { margin-right: 4px; padding-left: -4px; }
 .toc-stripe.cookware { background-color: #a58899; }
@@ -27,7 +29,11 @@
 .toc-stripe.cooltools { background-color: #e1925d; }
 .toc-stripe.misc { background-color: #647197; }
 .toc-stripe .ttl { margin-top: 25px; color: #fff; font-family: 'CheapPine-Sans', impact, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 34px; font-weight: normal; line-height: 1; }
+.toc-stripe ul { list-style-type: none; margin-left: 0; padding-left: 0; margin-top: 15px; }
+.toc-stripe ul li { margin-bottom: 10px; }
+.toc-stripe ul li a { color: #000; }
 
+@media (min-width: 480px) { background-color: red; }
 .page-products header { background-color: #e6d893; }
 .page-products .navbar-nav > li.active > a { color: #79516e; }
 
