--- a/scss/pages/_products.scss
+++ b/scss/pages/_products.scss
@@ -6,6 +6,21 @@
   float: left;
   text-align: center;
   padding: 20px;
+  @include breakpoint(papa-bear) {
+    display: flex;
+    align-items: center;
+    float: none;
+    width: 100%;
+    height: 160px;
+      text-align: left;
+    .ttl {
+      margin: 20px 20px;
+    }
+
+  }
+
+
+
   &.last {
     margin-right: 0;
     .ttl {
@@ -28,7 +43,28 @@
     font-weight: normal;
     line-height: 1;
   }
+  ul {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+    margin-top: 15px;
+    li {
+      margin-bottom: 10px;
+      a {
+        color: #000;
+      }
+    }
+  }
+
 }
+
+
+@media (min-width: $screen-xs) {
+    // float: none;
+    // width: 100%;
+    // height: 165px;
+    background-color: red;
+  }
 
 .page-products {
   header {
