--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -14,14 +14,15 @@
   > li {
     > a {
       font-family: 'CheapPine-Sans', impact, sans-serif;
-      font-size: 30px;
+      font-size: 26px;
       font-weight: normal;
       padding-left: 0;
-      padding-right: 67px;
+      padding-right: 47px;
       text-transform: uppercase;
       color: #000;
-      @media (min-width: $screen-md) {
-          padding-right: 32px;
+      @include breakpoint(papa-bear) {
+        font-size: 24px;
+          padding-right: 20px;
         }
     }
     &:last-child > a {
