more product page stuff
Signed-off-by: Steve Lombardi <smlombardi@gmail.com>

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -48,6 +48,7 @@
 //Custom Less and WordPress Less
 @import "wordpress.less";
 @import "custom.less";
+@import "block-grid.less";
 
 // Utility classes
 @import "utilities.less";
