--- a/css/npkg.css
+++ b/css/npkg.css
@@ -20,22 +20,38 @@
 
 .toc-stripe { height: 450px; width: 19.2%; margin-right: 1%; background-color: #ccc; float: left; text-align: center; padding: 20px; }
 @media (max-width: 992px) { .toc-stripe { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
-  .toc-stripe .ttl { margin: 20px 20px; } }
+  .toc-stripe .ttl { margin: 20px; } }
 .toc-stripe.last { margin-right: 0; }
-.toc-stripe.last .ttl { margin-right: 4px; padding-left: -4px; }
+.toc-stripe.last .ttl { text-indent: -5px; }
 .toc-stripe.cookware { background-color: #a58899; }
 .toc-stripe.tabletop { background-color: #eac662; }
 .toc-stripe.preparation { background-color: #a5b45d; }
 .toc-stripe.cooltools { background-color: #e1925d; }
 .toc-stripe.misc { background-color: #647197; }
+.toc-stripe.cookware-light { background-color: #ccbcc4; }
+.toc-stripe.tabletop-light { background-color: #f5e3b1; }
+.toc-stripe.preparation-light { background-color: #d7dab3; }
+.toc-stripe.cooltools-light { background-color: #edc8a8; }
+.toc-stripe.misc-light { background-color: #abaebc; }
 .toc-stripe .ttl { margin-top: 25px; color: #fff; font-family: 'CheapPine-Sans', impact, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 34px; font-weight: normal; line-height: 1; }
 .toc-stripe ul { list-style-type: none; margin-left: 0; padding-left: 0; margin-top: 15px; }
 .toc-stripe ul li { margin-bottom: 10px; }
 .toc-stripe ul li a { color: #000; }
 
-@media (min-width: 480px) { background-color: red; }
 .page-products header { background-color: #e6d893; }
-.page-products .navbar-nav > li.active > a { color: #79516e; }
+.page-products .navbar-nav > li.active > a > a { color: #79516e; }
+
+.toc-stripe.sub-stripe { width: 19.2%; margin-right: 0.5%; height: 448px; }
+.toc-stripe.product-box { margin-right: .9%; }
+.toc-stripe.product-box h4 { font-size: 14px; font-style: italic; font-weight: normal; }
+.toc-stripe.product-box ul li { font-size: 14px; line-height: 1.3; margin-bottom: 5px; }
+.toc-stripe.product-box .ttl { margin-top: 0; color: #000; }
+
+.hero-image { width: 50%; height: 450px; float: left; margin-right: 0; }
+
+li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor.menu-item-19 a { color: #79516e; }
+
+.page-pastry-bakeware header { background-color: #e6d893; }
 
 body { background-color: #eee; margin: 60px; }
 
