--- a/css/npkg.css
+++ b/css/npkg.css
@@ -51,7 +51,7 @@
 .sub-stripe.stripe2 { margin-right: .9%; }
 .sub-stripe.stripe2 h4 { font-size: 14px; font-style: italic; font-weight: normal; }
 .sub-stripe.stripe2 ul li { font-size: 14px; line-height: 1.3; margin-bottom: 5px; }
-.sub-stripe.stripe2 .ttl { margin-top: 0; color: #000; }
+.sub-stripe.stripe2 .ttl { margin-top: 0; color: #000; font-size: 32px; line-height: 1; }
 
 .hero-image { width: 50%; height: 450px; float: left; margin-right: 0; }
 @media (max-width: 992px) { .hero-image { width: 100%; height: auto; float: none; margin: 0; } }
@@ -64,7 +64,16 @@ li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current
 .cooltools .sub-stripe { background-color: #e1925d; }
 .cooltools .sub-stripe.second { background-color: #edc8a8; }
 
+.preparation .sub-stripe { background-color: #a5b45d; }
+.preparation .sub-stripe.second { background-color: #d7dab3; }
+
 .parent-products header { background-color: #e6d893; }
+
+.page-directions header { background-color: #e7d893; }
+.page-directions .navbar-nav > li.active > a { color: #e1b40a; }
+.page-directions .left { background-color: #f1e9c5; min-height: 448px; padding: 10px 40px; font-size: 12px; }
+.page-directions .left a { color: #000; }
+.page-directions .left h3 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; font-size: 30px; }
 
 body { background-color: #eee; margin: 60px; }
 @media (max-width: 992px) { body { margin: 0; } }
