--- a/scss/npkg.scss
+++ b/scss/npkg.scss
@@ -11,6 +11,7 @@
 @import 'nav';
 @import 'pages/about';
 @import 'pages/products';
+@import 'pages/directions';
 
 body {
   background-color: #eee;
