--- a/scss/npkg.scss
+++ b/scss/npkg.scss
@@ -12,6 +12,7 @@
 @import 'pages/about';
 @import 'pages/products';
 @import 'pages/directions';
+@import 'pages/vintage';
 
 body {
   background-color: #eee;
