--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,6 +1,4 @@
-// about page
-
-.page-about {
+.page-contact {
 
   header {
     background-color: #e7d893;
@@ -14,25 +12,27 @@
     min-height: 450px;
     padding: 5px 60px 10px;
     @include breakpoint(baby-bear) {
-      padding: 10px 20px;
+      min-height: 340px;
+      padding: 20px 40px;
     }
 
-    h1 {
+    h3 {
       font-family: 'CheapPine-Sans', impact, sans-serif;
       text-transform: uppercase;
       text-align: center;
+      font-size: 30px;
     }
   }
   .right {
-    background: #f1e9c5 url('../img/marty.jpg') right top no-repeat;
-    height: 473px;
+    background: #f1e9c5 url('../img/contact-image.jpg') right top no-repeat;
+    height: 448px;
     background-size: cover;
 
     @include breakpoint(papa-bear) {
         width: 720px;
         background-size: cover;
     }
-    @include breakpoint(papa-bear) {
+    @include breakpoint(baby-bear) {
         width: auto;
         background-size: cover;
     }
