--- a/css/npkg.css
+++ b/css/npkg.css
@@ -14,9 +14,12 @@
 
 .page-about header { background-color: #e7d893; }
 .page-about .navbar-nav > li.active > a { color: #e1b40a; }
-.page-about .left { background-color: #f1e9c5; min-height: 450px; padding: 10px 100px; }
+.page-about .left { background-color: #f1e9c5; min-height: 450px; padding: 5px 60px 10px; }
+@media (max-width: 480px) { .page-about .left { padding: 10px 20px; } }
 .page-about .left h1 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; }
-.page-about .right { background: #f1e9c5 url("../img/marty.jpg") right top no-repeat; min-height: 450px; }
+.page-about .right { background: #f1e9c5 url("../img/marty.jpg") right top no-repeat; height: 473px; background-size: cover; }
+@media (max-width: 992px) { .page-about .right { width: 720px; background-size: cover; } }
+@media (max-width: 992px) { .page-about .right { width: auto; background-size: cover; } }
 
 .toc-stripe { height: 450px; width: 19.2%; margin-right: 1%; background-color: #ccc; float: left; text-align: center; padding: 20px; }
 @media (max-width: 992px) { .toc-stripe { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
@@ -79,10 +82,44 @@ li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current
 
 li.current_page_item a { color: #902e49; }
 
+.indented { padding-left: 15px; padding-right: 15px; min-height: 600px; }
+
+.vintage-item { font-size: 13px; line-height: 1.3; }
+.vintage-item .vintage-title { font-size: 15px; margin-bottom: 5px; }
+.vintage-item p { margin-bottom: 5px; }
+.vintage-item .price { font-style: italic; }
+
+.page-contact header { background-color: #e7d893; }
+.page-contact .navbar-nav > li.active > a { color: #e1b40a; }
+.page-contact .left { background-color: #f1e9c5; min-height: 450px; padding: 5px 60px 10px; }
+@media (max-width: 480px) { .page-contact .left { min-height: 340px; padding: 20px 40px; } }
+.page-contact .left h3 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; font-size: 30px; }
+.page-contact .right { background: #f1e9c5 url("../img/contact-image.jpg") right top no-repeat; height: 448px; background-size: cover; }
+@media (max-width: 992px) { .page-contact .right { width: 720px; background-size: cover; } }
+@media (max-width: 480px) { .page-contact .right { width: auto; background-size: cover; } }
+
+.page-join .safe-unsubscribe { font-size: 10px; margin-top: 30px; }
+.page-join form { width: 100%; }
+.page-join form .btn { background-color: #f1e9c5; border-color: #f1e9c5; padding-left: 0; margin-top: 5px; }
+.page-join header { background-color: #e7d893; }
+.page-join .navbar-nav > li.active > a { color: #e1b40a; }
+.page-join .left { background-color: #f1e9c5; min-height: 450px; padding: 5px 60px 10px; }
+@media (max-width: 480px) { .page-join .left { min-height: 340px; padding: 20px 40px; } }
+.page-join .left h3 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; font-size: 30px; }
+.page-join .right { background: #f1e9c5 url("../img/join-image.jpg") right top no-repeat; height: 448px; background-size: cover; }
+@media (max-width: 992px) { .page-join .right { width: 720px; background-size: cover; } }
+@media (max-width: 480px) { .page-join .right { width: auto; background-size: cover; } }
+
 body { background-color: #eee; margin: 60px; }
 @media (max-width: 992px) { body { margin: 0; } }
 
+.error404 header { background-color: #e7d893; }
+.error404 header .logo-left { margin-right: 0; }
+.error404 .dmbs-main { background-color: #f1e9c5; text-align: center; padding: 50px 0; }
+
 .container { background-color: #fff; padding: 0; }
+
+a { color: #000; text-decoration: none; }
 
 .home .checker-header { display: -webkit-flex; display: -ms-flexbox; display: flex; height: 315px; border-bottom: 2px solid #ebdea6; background: #fff url("../img/checkerboard70.png") -2px 0 repeat; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
 
