--- a/scss/pages/_vintage.scss
+++ b/scss/pages/_vintage.scss
@@ -7,3 +7,24 @@
 li.current_page_item a {
   color: rgb(144, 46, 73);
 }
+
+.indented {
+  padding-left: 15px;
+  padding-right: 15px;
+  min-height: 600px;
+}
+
+.vintage-item {
+  font-size: 13px;
+  line-height: 1.3;
+  .vintage-title {
+    font-size: 15px;
+    margin-bottom: 5px;
+  }
+  p {
+    margin-bottom: 5px;
+  }
+  .price {
+    font-style: italic;
+  }
+}
