--- a/css/npkg.css
+++ b/css/npkg.css
@@ -67,6 +67,14 @@ li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current
 .preparation .sub-stripe { background-color: #a5b45d; }
 .preparation .sub-stripe.second { background-color: #d7dab3; }
 
+.tabletop .sub-stripe { background-color: #eac662; }
+.tabletop .sub-stripe.second { background-color: #f5e3b1; }
+
+.miscellaneous .sub-stripe { background-color: #647197; }
+.miscellaneous .sub-stripe .ttl { text-indent: -7px; }
+.miscellaneous .sub-stripe.second { background-color: #abaebc; }
+.miscellaneous .sub-stripe.second .p1 { margin-top: 20px; }
+
 .parent-products header { background-color: #e6d893; }
 
 .hero-image { width: 60.2%; height: 448px; float: left; margin-right: 0; background: #f1e9c5; background-size: cover; }
@@ -78,6 +86,13 @@ li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current
 .page-small-electrics .hero-image { background-image: url("../img/small-electrics.jpg"); }
 .page-bar-tools .hero-image { background-image: url("../img/bar-tools.jpg"); }
 .page-pepper-salt-herb-mills .hero-image { background-image: url("../img/pepper-salt-herb-mills.jpg"); }
+.page-cookbooks .hero-image { background-image: url("../img/cookbooks.jpg"); }
+.page-floor-coverings .hero-image { background-image: url("../img/floor-coverings.jpg"); }
+.page-coffee-tea .hero-image { background-image: url("../img/coffee-tea.jpg"); }
+.page-flatware .hero-image { background-image: url("../img/flatware.jpg"); }
+.page-dinnerware-serving-pieces .hero-image { background-image: url("../img/dinnerware-serving-pieces.jpg"); }
+.page-stemware-barware .hero-image { background-image: url("../img/stemware-barware.jpg"); }
+.page-candles .hero-image { background-image: url("../img/candles.jpg"); }
 @media (max-width: 992px) { .hero-image { width: 720px; background-size: cover; } }
 @media (max-width: 480px) { .hero-image { width: auto; background-size: cover; } }
 
