--- a/scss/pages/_products.scss
+++ b/scss/pages/_products.scss
@@ -23,6 +23,19 @@
       margin: 20px;
     }
   }
+  @include breakpoint(baby-bear) {
+    flex-direction: column;
+
+    align-items: center;
+    float: none;
+    width: 100%;
+    height: auto;
+    text-align: left;
+
+    .ttl {
+      margin: 20px;
+    }
+  }
 
   &.last {
     margin-right: 0;
@@ -142,9 +155,40 @@
       }
     }
   }
+  @include breakpoint(mama-bear) {
+
+    ul {
+      margin-left: 20px;
+    }
+
+  }
+  @include breakpoint(baby-bear) {
+    flex-direction: column;
+    height: auto;
+    .ttl {
+      margin-left: 0;
+    }
+    ul {
+      margin-left: 0;
+    }
+    &.stripe2 {
+      height: auto;
+      .ttl {
+        margin: 0;
+        text-align: center;
+      }
+      h4 {
+        margin-left: 0;
+        text-align: center;
+      }
+      ul {
+        margin-left: 0;
+      }
+    }
+  }
   //--------
   &.stripe2 {
-      margin-right: .9%;
+    margin-right: 0.9%;
     h4 {
       font-size: 14px;
       font-style: italic;
@@ -163,11 +207,21 @@
       font-size: 32px;
       line-height: 1;
     }
+    @include breakpoint(mama-bear) {
+      .ttl {
+        margin: 0;
+        width: 165px;
+      }
+      ul {
+        margin-left: 20px;
+        li {
+          line-height: 1;
+          margin-bottom: 5px;
+        }
+      }
+    }
   }
 }
-
-
-
 
 /////////////////////////////
 /// For specific products
@@ -177,10 +231,10 @@
 li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor.menu-item-19 a {
   color: rgb(121, 81, 110);
 }
-
-@mixin stripes($which) {
-
-}
+//
+// @mixin stripes($which) {
+//
+// }
 
 .cookware {
   .sub-stripe {
@@ -218,7 +272,7 @@ li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current
   .sub-stripe {
     background-color: $misc;
     .ttl {
-      text-indent: -7px
+      text-indent: -7px;
     }
     &.second {
       background-color: $misc-light;
@@ -228,7 +282,6 @@ li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current
     }
   }
 }
-
 
 .parent-products {
   header {
@@ -243,28 +296,61 @@ li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current
   margin-right: 0;
   background: #f1e9c5;
   background-size: cover;
-  .page-pastry-bakeware & { background-image: url('../img/cookware-bakeware.jpg'); }
-  .page-pots-pans & { background-image: url('../img/pots-pans.jpg'); }
-  .page-fine-cutlery & { background-image: url('../img/fine-cutlery.jpg'); }
-  .page-cutting-surfaces & { background-image: url('../img/cutting-surfaces.jpg'); }
-  .page-tools-gadgets & { background-image: url('../img/tools-gadgets.jpg'); }
-  .page-small-electrics & { background-image: url('../img/small-electrics.jpg'); }
-  .page-bar-tools & { background-image: url('../img/bar-tools.jpg'); }
-  .page-pepper-salt-herb-mills & { background-image: url('../img/pepper-salt-herb-mills.jpg'); }
-  .page-cookbooks & { background-image: url('../img/cookbooks.jpg'); }
-  .page-floor-coverings & { background-image: url('../img/floor-coverings.jpg'); }
-  .page-coffee-tea & { background-image: url('../img/coffee-tea.jpg'); }
-  .page-flatware & { background-image: url('../img/flatware.jpg'); }
-  .page-dinnerware-serving-pieces & { background-image: url('../img/dinnerware-serving-pieces.jpg'); }
-  .page-stemware-barware & { background-image: url('../img/stemware-barware.jpg'); }
-  .page-candles & { background-image: url('../img/candles.jpg'); }
+  //background-position: 0 0;
+  .page-pastry-bakeware & {
+    background-image: url('../img/cookware-bakeware.jpg');
+  }
+  .page-pots-pans & {
+    background-image: url('../img/pots-pans.jpg');
+  }
+  .page-fine-cutlery & {
+    background-image: url('../img/fine-cutlery.jpg');
+  }
+  .page-cutting-surfaces & {
+    background-image: url('../img/cutting-surfaces.jpg');
+  }
+  .page-tools-gadgets & {
+    background-image: url('../img/tools-gadgets.jpg');
+  }
+  .page-small-electrics & {
+    background-image: url('../img/small-electrics.jpg');
+  }
+  .page-bar-tools & {
+    background-image: url('../img/bar-tools.jpg');
+  }
+  .page-pepper-salt-herb-mills & {
+    background-image: url('../img/pepper-salt-herb-mills.jpg');
+  }
+  .page-cookbooks & {
+    background-image: url('../img/cookbooks.jpg');
+  }
+  .page-floor-coverings & {
+    background-image: url('../img/floor-coverings.jpg');
+  }
+  .page-coffee-tea & {
+    background-image: url('../img/coffee-tea.jpg');
+  }
+  .page-flatware & {
+    background-image: url('../img/flatware.jpg');
+  }
+  .page-dinnerware-serving-pieces & {
+    background-image: url('../img/dinnerware-serving-pieces.jpg');
+  }
+  .page-stemware-barware & {
+    background-image: url('../img/stemware-barware.jpg');
+  }
+  .page-candles & {
+    background-image: url('../img/candles.jpg');
+  }
 
   @include breakpoint(papa-bear) {
-      width: 720px;
-      background-size: cover;
+    width: 720px;
+    background-size: cover;
   }
   @include breakpoint(baby-bear) {
-      width: auto;
-      background-size: cover;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 270px;
   }
 }
