--- a/scss/npkg.scss
+++ b/scss/npkg.scss
@@ -5,9 +5,8 @@
   font-weight: normal;
   font-style: normal;
   src: url("../fonts/League_Gothic-webfont.eot");
-  src: url("../fonts/League_Gothic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/League_Gothic-webfont.woff") format("woff"), url("../fonts/League_Gothic-webfont.ttf") format("truetype"), url("../fonts/League_Gothic-webfont.svg#LeagueGothicRegular") format("svg"); }
-
-
+  src: url("../fonts/League_Gothic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/League_Gothic-webfont.woff") format("woff"), url("../fonts/League_Gothic-webfont.ttf") format("truetype"), url("../fonts/League_Gothic-webfont.svg#LeagueGothicRegular") format("svg");
+}
 @import 'variables';
 @import 'mixins';
 @import 'nav';
@@ -40,7 +39,6 @@ body {
   }
 }
 
-
 .container {
   background-color: #fff;
   padding: 0;
@@ -52,19 +50,19 @@ a {
 }
 
 .home {
-.checker-header {
-  display: flex;
-  height: 315px;
-  border-bottom: 2px solid #ebdea6;
-  background: #fff url("../img/checkerboard70.png") -2px 0 repeat;
-  align-items: center;
-  justify-content: center;
-  @include breakpoint(baby-bear) {
-    flex-direction: column;
-    // height: 165px;
-    padding: 10px;
+  .checker-header {
+    display: flex;
+    height: 315px;
+    border-bottom: 2px solid #ebdea6;
+    background: #fff url("../img/checkerboard70.png") -2px 0 repeat;
+    align-items: center;
+    justify-content: center;
+    @include breakpoint(baby-bear) {
+      flex-direction: column;
+      // height: 165px;
+      padding: 10px;
+    }
   }
-}
 }
 .full-height {
   min-height: 100vh;
@@ -94,7 +92,7 @@ header {
 }
 
 .tp-bgimg {
-  background-position: top  left !important;
+  background-position: top left !important;
   background-size: contain !important;
 }
 
@@ -110,8 +108,6 @@ header {
   //margin-left: -40px;
 }
 
-
-
 .dmbs-footer {
   margin-top: 30px;
   font-size: 13px;
@@ -124,5 +120,12 @@ header {
   }
   @include breakpoint(baby-bear) {
     padding: 0 15px 30px;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .sub-stripe.stripe2 ul li {
+    line-height: 1;
   }
 }
