--- a/css/npkg.css
+++ b/css/npkg.css
@@ -1,4 +1,5 @@
 @font-face { font-family: LeagueGothicRegular; font-weight: normal; font-style: normal; src: url("../fonts/League_Gothic-webfont.eot"); src: url("../fonts/League_Gothic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/League_Gothic-webfont.woff") format("woff"), url("../fonts/League_Gothic-webfont.ttf") format("truetype"), url("../fonts/League_Gothic-webfont.svg#LeagueGothicRegular") format("svg"); }
+
 .nav > li > a { padding: 15px 61px; }
 
 .navbar { margin-bottom: -3px; }
@@ -6,70 +7,108 @@
 .nav > li > a:hover, .nav > li > a:focus { text-decoration: none; background-color: #fff; }
 
 .navbar-nav { margin-left: 20px; }
+
 .navbar-nav > li > a { font-family: 'CheapPine-Sans', impact, sans-serif; font-size: 26px; font-weight: normal; padding-left: 0; padding-right: 47px; text-transform: uppercase; color: #000; }
+
 @media (max-width: 992px) { .navbar-nav > li > a { font-size: 24px; padding-right: 20px; } }
+
 .navbar-nav > li:last-child > a { padding-right: 0; }
 
 .navbar-default { margin-bottom: 0; padding-bottom: 0; background-color: transparent; border-color: transparent; }
 
 .navbar-toggle { color: #000; background-color: #f1e9c5; z-index: 1000; border: 1px solid #000; margin-right: 10px; }
+
 .navbar-toggle span { background-color: #000; z-index: 1010; }
 
 .menu-label { float: left; font-family: LeagueGothicRegular; font-size: 2.3em; padding: 5px 0 0 10px; }
 
 .page-about header { background-color: #e7d893; }
+
 .page-about .navbar-nav > li.active > a { color: #e1b40a; }
+
 .page-about .left { background-color: #f1e9c5; min-height: 450px; padding: 5px 60px 10px; }
+
 @media (max-width: 480px) { .page-about .left { padding: 10px 20px; } }
+
 .page-about .left h1 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; }
+
 .page-about .right { background: #f1e9c5 url("../img/marty.jpg") right top no-repeat; height: 473px; background-size: cover; }
+
 @media (max-width: 992px) { .page-about .right { width: 720px; background-size: cover; } }
+
 @media (max-width: 992px) { .page-about .right { width: auto; background-size: cover; } }
 
 .toc-stripe { height: 450px; width: 19.2%; margin-right: 1%; background-color: #ccc; float: left; text-align: center; padding: 20px; }
-@media (max-width: 992px) { .toc-stripe { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
+
+@media (max-width: 992px) { .toc-stripe { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
   .toc-stripe .ttl { margin: 20px; } }
-@media (max-width: 480px) { .toc-stripe { -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: center; -ms-flex-align: center; -ms-grid-row-align: center; align-items: center; float: none; width: 100%; height: auto; text-align: left; }
+
+@media (max-width: 480px) { .toc-stripe { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: auto; text-align: left; }
   .toc-stripe .ttl { margin: 20px; } }
+
 .toc-stripe.last { margin-right: 0; }
+
 .toc-stripe.last .ttl { text-indent: -5px; }
+
 .toc-stripe.cookware { background-color: #a58899; }
+
 .toc-stripe.tabletop { background-color: #eac662; }
+
 .toc-stripe.preparation { background-color: #a5b45d; }
+
 .toc-stripe.cooltools { background-color: #e1925d; }
+
 .toc-stripe.misc { background-color: #647197; }
+
 .toc-stripe.cookware-light { background-color: #ccbcc4; }
+
 .toc-stripe.tabletop-light { background-color: #f5e3b1; }
+
 .toc-stripe.preparation-light { background-color: #d7dab3; }
+
 .toc-stripe.cooltools-light { background-color: #edc8a8; }
+
 .toc-stripe.misc-light { background-color: #abaebc; }
+
 .toc-stripe .ttl { margin-top: 25px; color: #fff; font-family: 'CheapPine-Sans', impact, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 34px; font-weight: normal; line-height: 1; }
+
 .toc-stripe ul { list-style-type: none; margin-left: 0; padding-left: 0; margin-top: 15px; }
+
 .toc-stripe ul li { margin-bottom: 10px; }
+
 .toc-stripe ul li a { color: #000; }
 
 .page-products header { background-color: #e6d893; }
+
 .page-products .navbar-nav > li.active > a > a { color: #79516e; }
 
 .sub-stripe { width: 19.2%; margin-right: 0.5%; height: 448px; }
-@media (max-width: 992px) { .sub-stripe { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
+
+@media (max-width: 992px) { .sub-stripe { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
   .sub-stripe .ttl { margin: 0 0 0 20px; }
-  .sub-stripe ul { -webkit-columns: 3; -moz-columns: 3; columns: 3; margin-left: -50px; }
+  .sub-stripe ul { -webkit-columns: 3; columns: 3; margin-left: -50px; }
   .sub-stripe.stripe2 { height: 100px; }
   .sub-stripe.stripe2 .ttl { margin: 0 35px 0 0; }
   .sub-stripe.stripe2 ul { margin-left: 55px; } }
+
 @media (max-width: 768px) { .sub-stripe ul { margin-left: 20px; } }
-@media (max-width: 480px) { .sub-stripe { -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; height: auto; }
+
+@media (max-width: 480px) { .sub-stripe { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; height: auto; }
   .sub-stripe .ttl { margin-left: 0; }
   .sub-stripe ul { margin-left: 0; }
   .sub-stripe.stripe2 { height: auto; }
   .sub-stripe.stripe2 .ttl { margin: 0; text-align: center; }
   .sub-stripe.stripe2 h4 { margin-left: 0; text-align: center; }
   .sub-stripe.stripe2 ul { margin-left: 0; } }
+
 .sub-stripe.stripe2 { margin-right: 0.9%; }
+
 .sub-stripe.stripe2 h4 { font-size: 14px; font-style: italic; font-weight: normal; }
+
 .sub-stripe.stripe2 ul li { font-size: 14px; line-height: 1.3; margin-bottom: 5px; }
+
 .sub-stripe.stripe2 .ttl { margin-top: 0; color: #000; font-size: 32px; line-height: 1; }
+
 @media (max-width: 768px) { .sub-stripe.stripe2 .ttl { margin: 0; width: 165px; }
   .sub-stripe.stripe2 ul { margin-left: 20px; }
   .sub-stripe.stripe2 ul li { line-height: 1; margin-bottom: 5px; } }
@@ -77,47 +116,75 @@
 li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor.menu-item-19 a { color: #79516e; }
 
 .cookware .sub-stripe { background-color: #a58899; }
+
 .cookware .sub-stripe.second { background-color: #ccbcc4; }
 
 .cooltools .sub-stripe { background-color: #e1925d; }
+
 .cooltools .sub-stripe.second { background-color: #edc8a8; }
 
 .preparation .sub-stripe { background-color: #a5b45d; }
+
 .preparation .sub-stripe.second { background-color: #d7dab3; }
 
 .tabletop .sub-stripe { background-color: #eac662; }
+
 .tabletop .sub-stripe.second { background-color: #f5e3b1; }
 
 .miscellaneous .sub-stripe { background-color: #647197; }
+
 .miscellaneous .sub-stripe .ttl { text-indent: -7px; }
+
 .miscellaneous .sub-stripe.second { background-color: #abaebc; }
+
 .miscellaneous .sub-stripe.second .p1 { margin-top: 20px; }
 
 .parent-products header { background-color: #e6d893; }
 
 .hero-image { width: 60.2%; height: 448px; float: left; margin-right: 0; background: #f1e9c5; background-size: cover; }
+
 .page-pastry-bakeware .hero-image { background-image: url("../img/cookware-bakeware.jpg"); }
+
 .page-pots-pans .hero-image { background-image: url("../img/pots-pans.jpg"); }
+
 .page-fine-cutlery .hero-image { background-image: url("../img/fine-cutlery.jpg"); }
+
 .page-cutting-surfaces .hero-image { background-image: url("../img/cutting-surfaces.jpg"); }
+
 .page-tools-gadgets .hero-image { background-image: url("../img/tools-gadgets.jpg"); }
+
 .page-small-electrics .hero-image { background-image: url("../img/small-electrics.jpg"); }
+
 .page-bar-tools .hero-image { background-image: url("../img/bar-tools.jpg"); }
+
 .page-pepper-salt-herb-mills .hero-image { background-image: url("../img/pepper-salt-herb-mills.jpg"); }
+
 .page-cookbooks .hero-image { background-image: url("../img/cookbooks.jpg"); }
+
 .page-floor-coverings .hero-image { background-image: url("../img/floor-coverings.jpg"); }
+
 .page-coffee-tea .hero-image { background-image: url("../img/coffee-tea.jpg"); }
+
 .page-flatware .hero-image { background-image: url("../img/flatware.jpg"); }
+
 .page-dinnerware-serving-pieces .hero-image { background-image: url("../img/dinnerware-serving-pieces.jpg"); }
+
 .page-stemware-barware .hero-image { background-image: url("../img/stemware-barware.jpg"); }
+
 .page-candles .hero-image { background-image: url("../img/candles.jpg"); }
+
 @media (max-width: 992px) { .hero-image { width: 720px; background-size: cover; } }
+
 @media (max-width: 480px) { .hero-image { width: 100%; background-repeat: no-repeat; background-position: center center; height: 270px; } }
 
 .page-directions header { background-color: #e7d893; }
+
 .page-directions .navbar-nav > li.active > a { color: #e1b40a; }
+
 .page-directions .left { background-color: #f1e9c5; min-height: 448px; padding: 10px 40px; font-size: 12px; }
+
 .page-directions .left a { color: #000; }
+
 .page-directions .left h3 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; font-size: 30px; }
 
 .page-vintage header { background-color: #e6d893; }
@@ -127,63 +194,97 @@ li.current_page_item a { color: #902e49; }
 .indented { padding-left: 15px; padding-right: 15px; min-height: 600px; }
 
 .vintage-item { font-size: 13px; line-height: 1.3; }
+
 .vintage-item .vintage-title { font-size: 15px; margin-bottom: 5px; }
+
 .vintage-item p { margin-bottom: 5px; }
+
 .vintage-item .price { font-style: italic; }
 
 .page-contact header { background-color: #e7d893; }
+
 .page-contact .navbar-nav > li.active > a { color: #e1b40a; }
+
 .page-contact .left { background-color: #f1e9c5; min-height: 450px; padding: 5px 60px 10px; }
+
 @media (max-width: 480px) { .page-contact .left { min-height: 340px; padding: 20px 40px; } }
+
 .page-contact .left h3 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; font-size: 30px; }
+
 .page-contact .right { background: #f1e9c5 url("../img/contact-image.jpg") right top no-repeat; height: 448px; background-size: cover; }
+
 @media (max-width: 992px) { .page-contact .right { width: 720px; background-size: cover; } }
+
 @media (max-width: 480px) { .page-contact .right { width: auto; background-size: cover; } }
 
 .page-join .safe-unsubscribe { font-size: 10px; margin-top: 30px; }
+
 .page-join form { width: 100%; }
+
 .page-join form .btn { background-color: #f1e9c5; border-color: #f1e9c5; padding-left: 0; margin-top: 5px; }
+
 .page-join header { background-color: #e7d893; }
+
 .page-join .navbar-nav > li.active > a { color: #e1b40a; }
+
 .page-join .left { background-color: #f1e9c5; min-height: 450px; padding: 5px 60px 10px; }
+
 @media (max-width: 480px) { .page-join .left { min-height: 340px; padding: 20px 40px; } }
+
 .page-join .left h3 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; font-size: 30px; }
+
 .page-join .right { background: #f1e9c5 url("../img/join-image.jpg") right top no-repeat; height: 448px; background-size: cover; }
+
 @media (max-width: 992px) { .page-join .right { width: 720px; background-size: cover; } }
+
 @media (max-width: 480px) { .page-join .right { width: auto; background-size: cover; } }
 
 body { background-color: #eee; margin: 60px; }
+
 @media (max-width: 992px) { body { margin: 0; } }
 
 .error404 header { background-color: #e7d893; }
+
 .error404 header .logo-left { margin-right: 0; }
+
 .error404 .dmbs-main { background-color: #f1e9c5; text-align: center; padding: 50px 0; }
 
 .container { background-color: #fff; padding: 0; }
 
 a { color: #000; text-decoration: none; }
 
-.home .checker-header { display: -webkit-flex; display: -ms-flexbox; display: flex; height: 315px; border-bottom: 2px solid #ebdea6; background: #fff url("../img/checkerboard70.png") -2px 0 repeat; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
-@media (max-width: 480px) { .home .checker-header { -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; padding: 10px; } }
+.home .checker-header { display: -webkit-box; display: -ms-flexbox; display: flex; height: 315px; border-bottom: 2px solid #ebdea6; background: #fff url("../img/checkerboard70.png") -2px 0 repeat; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+
+@media (max-width: 480px) { .home .checker-header { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; padding: 10px; } }
 
 .full-height { min-height: 100vh; }
 
-header { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; background-color: #e3d58e; padding: 20px 0; }
+header { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; background-color: #e3d58e; padding: 20px 0; }
+
 @media (max-width: 992px) { header { padding: 10px 20px; } }
-@media (max-width: 480px) { header { -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; } }
+
+@media (max-width: 480px) { header { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; } }
+
 header .logo-left { margin-right: 40px; }
+
 @media (max-width: 992px) { header .logo-left { margin-right: 10px; } }
+
 header .section-box { margin-bottom: 20px; }
 
 .tp-bgimg { background-position: top left !important; background-size: contain !important; }
 
 @media (max-width: 480px) { #rev_slider_1_1_wrapper { height: 175px !important; } }
+
 .section-box { padding-top: 20px; }
 
 .dmbs-footer { margin-top: 30px; font-size: 13px; color: #777; padding: 0 36px 36px; }
+
 .dmbs-footer .copyright { font-size: 11px; padding-top: 50px; }
+
 @media (max-width: 480px) { .dmbs-footer { padding: 0 15px 30px; } }
 
 @media (max-width: 768px) { .sub-stripe.stripe2 ul li { line-height: 1; } }
 
+@media (min-width: 768px) { .navbar-nav { float: none; margin-left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-pack: distribute; justify-content: space-around; }
+  .navbar-nav > li { float: none; } }
 /*# sourceMappingURL=npkg.css.map */
