set links to color based on cat

--- a/css/npkg.css
+++ b/css/npkg.css
@@ -82,6 +82,8 @@
 
 .page-products .navbar-nav > li.active > a > a { color: #79516e; }
 
+.page-id-18 li.current_page_item a { color: #e1b40a; }
+
 .sub-stripe { width: 19.2%; margin-right: 0.5%; height: 448px; }
 
 @media (max-width: 992px) { .sub-stripe { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
@@ -113,7 +115,15 @@
   .sub-stripe.stripe2 ul { margin-left: 20px; }
   .sub-stripe.stripe2 ul li { line-height: 1; margin-bottom: 5px; } }
 
-li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor.menu-item-19 a { color: #79516e; }
+.category-preparation li.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor a { color: #a5b45d !important; }
+
+.category-cool-tools li.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor a { color: #e1925d !important; }
+
+.category-cookware-bakeware li.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor a { color: #a58898 !important; }
+
+.category-tabletop li.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor a { color: #ebc660 !important; }
+
+.category-miscellaneous li.menu-item.menu-item-type-post_type.menu-item-object-page.current-page-ancestor a { color: #637197 !important; }
 
 .cookware .sub-stripe { background-color: #a58899; }
 
@@ -190,8 +200,6 @@ li#menu-item-19.menu-item.menu-item-type-post_type.menu-item-object-page.current
 .page-directions .left h3 { font-family: 'CheapPine-Sans', impact, sans-serif; text-transform: uppercase; text-align: center; font-size: 30px; }
 
 .page-vintage header { background-color: #e6d893; }
-
-li.current_page_item a { color: #902e49; }
 
 .indented { padding-left: 15px; padding-right: 15px; min-height: 600px; }
 
