--- a/scss/pages/_vintage.scss
+++ b/scss/pages/_vintage.scss
@@ -4,9 +4,9 @@
   }
 }
 
-li.current_page_item a {
-  color: rgb(144, 46, 73);
-}
+// li.current_page_item a {
+//   color: rgb(144, 46, 73);
+// }
 
 .indented {
   padding-left: 15px;
