--- a/scss/npkg.scss
+++ b/scss/npkg.scss
@@ -18,7 +18,7 @@
 @import 'pages/join';
 
 body {
-  background-color: #eee;
+  background-color: #fff;
   margin: 60px;
   @include breakpoint(papa-bear) {
     margin: 0;
