--- a/css/npkg.css
+++ b/css/npkg.css
@@ -259,7 +259,7 @@ body { background-color: #fff; margin: 60px; }
 
 .error404 .dmbs-main { background-color: #f1e9c5; text-align: center; padding: 50px 0; }
 
-.container { background-color: #fff; padding: 0; }
+.container { background-color: #fff; padding: 0; border: 1px solid #777 !important; }
 
 a { color: #000; text-decoration: none; }
 
